--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,33 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+
+@keyframes header-menu {
+    from {
+        transform: translateX(-5px);
+    }
+
+    to {
+        transform: translateX(0);
+    }
+}
+
+@keyframes is-scale {
+    from {
+        scale: 1;
+    }
+
+    to {
+        scale: 1.5;
+    }
+}
+
+@keyframes is-visible {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
