--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,63 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+/*Слой тем*/
+@layer theme {
+    @layer default, light, dark;
+
+    @layer default {
+        :root {
+            --main-color: #00CC14;
+            --bg-color: #000000;
+            --wght-regular: 465;
+            --wght-bold: 785;
+            --main-gradient: repeating-linear-gradient(to right, #000000 0 2px, transparent 2px 4px),
+            repeating-linear-gradient(to bottom, #000000 0 2px, transparent 2px 4px),
+            linear-gradient(to bottom, #007f0c 0.01%, #004306);
+        }
+        .button::after {
+            background: var(--main-color);
+        }
+    }
+
+    @layer light {
+        :root.theme-light {
+            --main-color: #000000;
+            --bg-color: #ffffff;
+            --wght-regular: 400;
+            --wght-bold: 700;
+            --main-gradient: repeating-linear-gradient(to right, #d3d3d3 0 2px, transparent 2px 4px), repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px), linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+        }
+        .button::after {
+            background: var(--bg-color);
+        }
+    }
+    @layer dark {
+        :root.theme-dark {
+            --main-color: #00CC14;
+            --bg-color: #000000;
+            --wght-regular: 465;
+            --wght-bold: 785;
+            --main-gradient: repeating-linear-gradient(to right, #000000 0 2px, transparent 2px 4px),
+            repeating-linear-gradient(to bottom, #000000 0 2px, transparent 2px 4px),
+            linear-gradient(to bottom, #007f0c 0.01%, #004306);
+        }
+    }
+}
+
+
+@media (prefers-color-scheme: light) {
+    @layer theme.light {
+        :root {
+            --main-color: #000000;
+            --bg-color: #ffffff;
+            --wght-regular: 400;
+            --wght-bold: 700;
+            --main-gradient: repeating-linear-gradient(to right, #d3d3d3 0 2px, transparent 2px 4px), repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px), linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+        }
+        .button::after {
+            background: var(--bg-color);
+        }
+    }
+}
