--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -3,13 +3,14 @@
 @font-face {
     font-display: swap;
     font-family: 'PressStart2P';
-    src: url('../fonts/PressStart2P-Regular.woff') format('woff');
+    src: url('/fonts/PressStart2P-Regular.woff') format('woff');
     font-weight: normal;
 }
 
 @font-face {
     font-display: swap;
     font-family: 'Inter';
-    src: local('Inter'), url('../fonts/Inter-Variable.woff2') format('woff2 supports variations'), url('../fonts/Inter-Variable.woff2') format('woff2-variations');
+    src: local('Inter'), url('/fonts/Inter-Variable.woff2') format('woff2 supports variations'),
+    url('/fonts/Inter-Variable.woff2') format('woff2-variations');
     font-weight: 400 785;
 }
