--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,7 @@
 .header__logo-subtitle {
     margin-top: 20px;
     font-size: clamp(0.875rem, 0.7143rem + 0.8036vw, 1.4375rem);
-    font-variation-settings: "wght" var(--wght-bold, 700);
+    font-variation-settings: "wght" var(--wght-bold);
 }
 
 .theme-menu__list {
@@ -118,7 +118,7 @@
 
 .button {
     position: relative;
-    transition: box-shadow 0.5s ease-in-out;
+    transition: box-shadow 0.3s ease;
 }
 
 .button::after {
@@ -178,6 +178,7 @@
     font-size: 18px;
     border-bottom: 2px solid var(--main-color);
     padding: 3px 10px;
+    font-variation-settings: "wght" var(--wght-bold);
 }
 
 .cards__item-label {
@@ -218,6 +219,7 @@
 .cards__item-text p {
     margin-bottom: 1.625rem;
     line-height: 21px;
+    font-variation-settings: 'wght' var(--wght-regular);
 }
 
 .cards__item-btns {
@@ -238,50 +240,6 @@
     width: 37px;
     height: 34px;
     vertical-align: bottom;
-}
-
-.like-icon .main,
-.like-icon .core {
-    fill: transparent;
-}
-
-.like-icon .contour {
-    fill: var(--main-color);
-}
-
-.like-icon .sparks {
-    opacity: 0;
-    fill: red;
-}
-
-.like-icon:hover .core {
-    fill: var(--main-color);
-    transition: fill .3s .03s linear;
-}
-
-.like-icon:hover .main {
-    fill: var(--main-color);
-    transition: fill .3s .05s linear;
-}
-
-.like-icon.is-liked {
-    animation: is-scale 1 .3s .1s ease-in alternate;
-    transform-origin: center;
-}
-
-.like-icon.is-liked .main,
-.like-icon.is-liked .contour,
-.like-icon.is-liked .core {
-    fill: red;
-}
-
-.like-icon.is-liked .sparks {
-    animation: is-visible 1 .3s .3s ease-in alternate;
-}
-
-.like-icon:active .main,
-.like-icon:active .core {
-    fill: red;
 }
 
 .filter-invert {
@@ -362,6 +320,7 @@
 }
 
 .popup__title {
+    text-transform: uppercase;
     display: flex;
     place-content: center;
     align-items: center;
@@ -374,6 +333,7 @@
 }
 
 .confirm__button {
+    text-transform: uppercase;
     background: var(--bg-color);
     border: 2px solid var(--main-color);
     width: 100%;
